make background fixed on scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
   );
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: 100vw 100vh;
+  background-size: cover;
   font: 1em sans-serif;
   color: #323232;
 }
